--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Aug 01 17:32:58 MYT 2023
-sdk.dir=C\:\\Users\\TARUMT\\AppData\\Local\\Android\\Sdk
+#Sun Aug 20 17:48:26 MYT 2023
+sdk.dir=C\:\\Users\\Wei\\AppData\\Local\\Android\\Sdk
